# NetVanguard

./: .clang-format  .gitignore  AUTHORS  ChangeLog  Kbuild  Makefile.am  README  README.md  autogen.sh  configure.ac  run-style-check
config/: kernel.h  types.h
include/: kernel.h
include/kernel_module/: kernel.h
include/user_cli/: cli.h
include/user_daemon/: user.h
lib/: db.c  db.h  netlink_handler.c  netlink_handler.h  parser.c  parser.h  tcp_handler.c  tcp_handler.h  uds_handler.c  uds_handler.h
src/kernel/: kernel.c
src/kernel_module/: kernel.c
src/user_cli/: cli.c
src/user_daemon/: user.c
tests/netlink_simple_connection/: netlink_connection.c
tests/tcp_simple_connection/: main.c  tcp_client.c  tcp_connection.c  tcp_server.c
tests/tcp_simple_connection/include/: tcp_handler.h
tests/tcp_simple_connection/src/: tcp_handler.c
tests/uds_simple_connection/: uds_client.c  uds_server.c
